<resources>
    <string name="app_name">B-Connect</string>
    <string name="site">bconnect-egypt.com</string>
    <string name="username"></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">الصفحة الرئيسية</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_sup">الدعم الفني</string>
    <string name="title_activity_sup_m">تحصيل الاشتراك الشهري فقط</string>
    <string name="title_activity_sup_o">تحصيل جميع الخدمات</string>
    <string name="title_activity_sup_D_T1">يمكن التحصيل بنفس رقم اللإيصال الإشتراك الشهري لاشهر متعددة او لسنة او لسنتين كاملتين</string>
    <string name="title_activity_sup_D_T2">يمكن تحصيل الاشتراك الشهري و  جميع الخدمات الاخرى بنفس رقم اللإيصال عدة مرات</string>

    <string name="title_activity_sup_uni">تحصيل الوحدات الإضافية</string>

    <string name="title_activity_install">التركيبات الجديدة</string>
    <string name="title_activity_order">طلب وحدات الإضافية</string>
    <string name="title_activity_order_Main">الوحدات الإضافية</string>
    <string name="title_activity_new_con">إنشاء عقد جديد</string>
    <string name="title_activity_edit_con">اعادة تفعيل عقد سابق</string>
    <string name="title_activity_contract">المبيعات</string>
    <string name="title_activity_Branchs">الفروع</string>
    <string name="title_activity_ClientBB">العملاء</string>
    <string name="title_activity_MySall">مبيعاتي</string>
    <string name="title_activity_AmountPB">مبالغ مطلوب سدادها للشركة</string>
    <string name="title_activity_mess_list">صندوق الرسائل الواردة</string>


    <string name="dis_activity_install"> تركيب و تدريب  العملاء</string>
    <string name="dis_activity_sup">تحصيل الاشتراك الشهري و الخدمات الاخرى</string>
    <string name="dis_activity_order_Main">طلب و تحصيل الوحدات الإضافية</string>
    <string name="dis_activity_contract">انشاء عقد جديد  و اعادة تفعيل العميل </string>
    <string name="dis_activity_MySall">جميع المبيعات الخاصة بك</string>
    <string name="dis_activity_AmountPB"> ربط المبالغ المحصلة بحوالة او شيك او نقدي لتسديد في الشركة</string>
    <string name="dis_activity_mess_list"> اخر اخبار الشركة و مواعيد الاجتماعات</string>
    <string name="dis_activity_login">اضغط ضغطة مطولة لتسجيل الخروج</string>


    <string name="title_nav_logout"> <u>تسجيل خروج</u></string>
    <string name="title_nav_noti_sw">الإشعارات</string>


    <string-array name="MonthArray">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="bankName">
        <item>البنك الاهلي</item>
        <item>بنك القاهرة</item>
        <item>بنك مصر</item>

    </string-array>

    <string-array name="service">
        <item>مصاريف تشغيل</item>
        <item>باقي رسوم انضمام</item>
        <item>اشتراكات اعادة تفعيل</item>

    </string-array>
    <string name="button">Button</string>
    <string name="title_activity_my_sale">MySaleActivity</string>
    <string name="title_activity_web">WebActivity</string>


    <!--related for all activitys-->

    <string name="loading_data_message">تحميل البيانات ، يرجى الانتظار قليلا</string>
    <string name="data_lost_message">غير قادر على تحميل البيانات ، يرجى التحقق من خدمة الإنترنت الخاصة بك</string>
    <string name="exit_message_header">الخروج</string>
    <string name="exit_message_body">هل أنت متأكد من أنك تريد الخروج؟</string>
    <string name="exit_message_botton_true">نعم</string>
    <string name="exit_message_botton_false">لا</string>

    <string name="button_save">حفظ</string>

    <string name="title_ad">إعلان</string>
    <string name="title_off">عرض</string>


    <string name="active_ca_title">الحساب غير مفعل</string>
    <string name="active_ca_body">حسابك غير مفعل ، يرجى التواصل مع بي كونيكت لإعادة تفعيل الحساب</string>

    <!--connection lost message-->
    <string name="con_message_body">لا توجد خدمة إنترنت ، تحقق من خدمة الإنترنت الخاصة بك وانقر فوق إعادة فحص</string>
    <string name="con_message_botton_check">إعادة فحص</string>


</resources>
