<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    >



<LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:orientation="vertical"
       android:gravity="center"
        android:layout_margin="10dp"

        >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:textColor="#787777"
        android:textSize="10pt"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:id="@+id/Tit1"
        android:layout_alignParentTop="true"
        android:textAlignment="center"
        android:text="@string/title_activity_sup_D_T1"/>

        <Button
            android:id="@+id/butsupm"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/colorDarkRed"
            android:text="@string/title_activity_sup_m"
            android:textColor="#ffff"
            android:textSize="25dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:textColor="#787777"
        android:textSize="10pt"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:id="@+id/Tit2"
        android:layout_alignParentTop="true"
        android:textAlignment="center"
        android:text="@string/title_activity_sup_D_T2"/>

        <Button
            android:id="@+id/butsupo"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/colorDarkRed"
            android:text="@string/title_activity_sup_o"
            android:textColor="#ffff"
            android:textSize="25dp" />




    </LinearLayout>
</RelativeLayout>